--- a/_package-export/example/src/app/globals.scss
+++ b/_package-export/example/src/app/globals.scss
@@ -716,7 +716,7 @@ button {
       display: block;
       width: 100%;
       height: 1.5px;
-      background: rgba(0, 0, 0, 0.4);
+      background: #999;
       border-radius: 1px;
       transition: transform 0.2s ease;
       transform-origin: center;
@@ -725,10 +725,10 @@ button {
 
   .mobile-nav-toggle.open .mobile-nav-icon {
     span:first-child {
-      transform: translateY(3px) rotate(45deg);
+      transform: translateY(3.25px) rotate(45deg);
     }
     span:last-child {
-      transform: translateY(-3px) rotate(-45deg);
+      transform: translateY(-3.25px) rotate(-45deg);
     }
   }
 
